Fix card spacing issue

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body, h1, h2, h3, h4, p, button, input {
 #card-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: 220px;
+    grid-auto-rows: 280px;
     gap: 25px;
     padding: 40px;
     margin: 0px 100px;
@@ -60,7 +60,7 @@ body, h1, h2, h3, h4, p, button, input {
 
 /* CARD CONTENTS */
 .card h2 {
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 400;
     margin-bottom: 5px;
 }
